# agent-quintet-demo

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
.snapshots/: quintet-demo-mock.json
src/quintet_demo/: __init__.py  agent.py  tools.py
tests/: test_agent.py
